# Voxel-Game

./: AGENTS.md  Cargo.toml
src/: camera_controller.rs  game_plugins.rs  gravity.rs  main.rs  objects.rs  planet_source.rs  player_controller.rs  sphere_source.rs  world_interaction.rs
src/objects/: ball.rs  spaceship.rs
src/planet_source/: config.rs  generation.rs  plugin.rs  terrain.rs  tiles.rs
