[package]
name = "Voxel-Game"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracy = [
	"dep:tracing-tracy",
	"bevy/debug",
	"bevy/trace",
	"voxel-data/tracy",
	"voxel-edit/tracy",
	"voxel-physics/tracy",
	"voxel-gpu/tracy",
	"voxel-sources/tracy",
	"voxel-streaming/tracy",
	"tracy-client/enable",
]

[dependencies]
bevy = "0.19.0"
bevy_egui = "0.40"
fastnoise-lite = "1.1.1"
tokio = { version = "1", features = ["full"] }
tracing-tracy = { version = "0.11", default-features = false, features = ["enable", "broadcast"], optional = true }
tracy-client = { version = "0.18.4", default-features = false }

camera-voxel-loader = { git = "https://github.com/ItchyTrack/Voxel-Game-Engine.git", branch = "main" }
voxel-gpu = { git = "https://github.com/ItchyTrack/Voxel-Game-Engine.git", branch = "main" }
voxel-data = { git = "https://github.com/ItchyTrack/Voxel-Game-Engine.git", branch = "main" }
voxel-edit = { git = "https://github.com/ItchyTrack/Voxel-Game-Engine.git", branch = "main" }
voxel-physics = { git = "https://github.com/ItchyTrack/Voxel-Game-Engine.git", branch = "main" }
voxel-engine = { git = "https://github.com/ItchyTrack/Voxel-Game-Engine.git", branch = "main" }
voxel-sources = { git = "https://github.com/ItchyTrack/Voxel-Game-Engine.git", branch = "main" }
voxel-streaming = { git = "https://github.com/ItchyTrack/Voxel-Game-Engine.git", branch = "main" }

[profile.release]
debug = true
